<resources>
    <string name="app_name">FilGPS</string>
    <string name="sair">SAIR</string>
    <string name="title_activity_maps">Map</string>
    <string name="cliente">Cliente</string>
    <string name="Latitude">Latitude</string>
    <string name="Long">Longitude</string>
    <string name="nif">NIF</string>
    <string name="morada">Morada</string>
    <string name="contato">Contato</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>
