<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cliente"
        android:id="@+id/TV_Cliente"
        android:textSize="25sp"
        android:paddingLeft="5sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Latitude"
        android:id="@+id/TV_Lat"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Long"
        android:id="@+id/TV_Long"
        android:textSize="25sp"
        android:layout_alignParentRight="true"
        android:paddingRight="10sp"
        android:textColor="#000000" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2sp"
        android:background="#000000"
        android:layout_below="@+id/TV_Cliente"
        android:id="@+id/view">
    </View>
</RelativeLayout>